--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "react/prop-types": "off",
     "react/no-unescaped-entities": 0,
     "no-shadow": "off",
+    "camelcase": "off",
     "jsx-a11y/label-has-associated-control": ["error", {
       "required": {
         "some": ["nesting", "id"]
