--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "antd": "^5.4.6",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.7",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-jwt": "^1.1.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
