--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas": "^2.11.2",
     "framer-motion": "^10.12.7",
     "jwt-decode": "^3.1.2",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -57,12 +58,15 @@
     "@babel/preset-react": "^7.18.6",
     "@testing-library/dom": "^9.3.0",
     "babel-jest": "^29.5.0",
+    "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss-loader": "^7.3.0",
+    "style-loader": "^3.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
