--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.4.3",
     "antd": "^5.4.6",
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "framer-motion": "^10.12.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -27,7 +28,7 @@
   "scripts": {
     "start": " set PORT=3001 &&  react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,6 +55,7 @@
     "@babel/plugin-syntax-jsx": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/dom": "^9.3.0",
     "babel-jest": "^29.5.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
